WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221541
Deprecation warnings for NSImageHintSymbolFont and NSImageHintSymbolScale
https://bugs.webkit.org/show_bug.cgi?id=221541
Summary
Deprecation warnings for NSImageHintSymbolFont and NSImageHintSymbolScale
Antoine Quint
Reported
2021-02-08 02:24:44 PST
Deprecation warnings for NSImageHintSymbolFont and NSImageHintSymbolScale
Attachments
Patch
(1.64 KB, patch)
2021-02-08 02:25 PST
,
Antoine Quint
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-02-08 02:25:08 PST
Created
attachment 419568
[details]
Patch
Antoine Quint
Comment 2
2021-02-08 04:31:37 PST
Committed
r272486
: <
https://trac.webkit.org/changeset/272486
>
Radar WebKit Bug Importer
Comment 3
2021-02-08 04:32:15 PST
<
rdar://problem/74091881
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug