Deprecation warnings for NSImageHintSymbolFont and NSImageHintSymbolScale https://bugs.webkit.org/show_bug.cgi?id=221541

Unreviewed build fix.

* rendering/RenderThemeMac.mm:
(WebCore::createAttachmentPlaceholderImage):

Canonical link: https://commits.webkit.org/233800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272486 268f45cc-cd09-0410-ab3c-d52691b4dbfc